--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,18 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  db-test:
+    image: postgres:15
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: inventory_test
+    ports:
+      - '5433:5432'
+    volumes:
+      - postgres-test-data:/var/lib/postgresql/data
+
 volumes:
   postgres-data:
+  postgres-test-data:
