--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
 version: '3.8'
 
 services:
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '8080:8080'
+    environment:
+      - APP_ENV=development
+      # For local development with Docker Postgres
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/inventory?sslmode=disable
+      - DATABASE_NO_SSL_URL=postgres://postgres:postgres@db:5432/inventory?sslmode=disable
+      # Uncomment and update these for Supabase (production)
+      # - DATABASE_URL=postgres://postgres:[YOUR-PASSWORD]@db.awqcdpsyqfdazxonieyt.supabase.co:5432/postgres?sslmode=verify-full&host=db.awqcdpsyqfdazxonieyt.supabase.co
+      # - DATABASE_NO_SSL_URL=postgres://postgres:[YOUR-PASSWORD]@db.awqcdpsyqfdazxonieyt.supabase.co:5432/postgres?sslmode=prefer&host=db.awqcdpsyqfdazxonieyt.supabase.co
+    depends_on:
+      - db
+
+  # Local development database
   db:
     image: postgres:15
     restart: always
@@ -13,6 +31,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  # Test database
   db-test:
     image: postgres:15
     restart: always
